Added component configuration to console app config

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,11 @@
                 }
             },
             "console": {
+                "components": {
+                    "authManager": {
+                        "class": "yii\\rbac\\DbManager"
+                    }
+                },
                 "controllerMap": {
                     "rbac": {
                         "class": "futuretek\\rbac\\RbacController"
