--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "yii"
     ],
     "type": "yii2-extension",
-    "license": "proprietary",
+    "license": "Apache-2.0",
     "homepage": "http://www.futuretek.cz/",
     "authors": [
         {
@@ -18,23 +18,12 @@
             "role": "Developer"
         }
     ],
-    "support": {
-        "issues": "https://jira.futuretek.cz/browse/YII",
-        "wiki": "https://doc.futuretek.cz/display/YII",
-        "source": "https://git.futuretek.cz/projects/YII/repos/ext-rbac/browse"
-    },
     "require": {
         "php": ">=5.5.0",
         "futuretek/yii2-shared": "^1.0.0",
         "futuretek/yii2-yii-shared": "^1.0.0",
         "futuretek/yii2-migrations": "^1.0.0"
     },
-    "repositories": [
-        {
-            "url": "https://composer.futuretek.cz/repo/private/",
-            "type": "composer"
-        }
-    ],
     "autoload": {
         "psr-4": {
             "futuretek\\rbac\\": ""
