Raised PHP version

--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
     ],
     "type": "yii2-extension",
     "license": "Apache-2.0",
-    "homepage": "http://www.futuretek.cz/",
+    "homepage": "https://www.futuretek.cz/",
     "authors": [
         {
             "name": "Lukas Cerny",
             "email": "lukas.cerny@futuretek.cz",
-            "homepage": "http://www.futuretek.cz",
+            "homepage": "https://www.futuretek.cz",
             "role": "Developer"
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "futuretek/yii2-shared": "^1.0.0",
-        "futuretek/yii2-yii-shared": "^1.0.0",
-        "futuretek/yii2-migrations": "^1.0.0"
+        "php": ">=7.4.0",
+        "futuretek/yii2-shared": "^3.0.0",
+        "futuretek/yii2-yii-shared": "^2.0.0",
+        "futuretek/yii2-migrations": "^1.5.2"
     },
     "autoload": {
         "psr-4": {
